@@ -22,8 +22,6 @@
 
 package org.wildfly.clustering.infinispan.marshall;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.function.BiFunction;
@@ -43,7 +41,7 @@ import org.wildfly.clustering.marshalling.protostream.SerializationContextBuilde
 public enum InfinispanMarshallerFactory implements BiFunction<ModuleLoader, List<Module>, Marshaller> {
 
     LEGACY() {
-        private final Set<String> protoStreamModules = new HashSet<>(Arrays.asList("org.wildfly.clustering.server", "org.wildfly.clustering.ejb.infinispan", "org.wildfly.clustering.web.infinispan"));
+        private final Set<String> protoStreamModules = Set.of("org.wildfly.clustering.server", "org.wildfly.clustering.ejb.infinispan", "org.wildfly.clustering.web.infinispan");
         private final Predicate<String> protoStreamPredicate = this.protoStreamModules::contains;
 
         @Override
